# orchestrator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  stderr.txt
configs/: mcp.config-2.json  mcp.config.json
docs/: alignment.md
docs/plans/: in-depth_plan_orchestrator.md
docs/research/: a2a-research.md
docs/tasks/: PLAN.md  plan.json
src/orchestrator/: __init__.py  config.py  config_loader.py
src/orchestrator/cli/: mcp_aggregator.py
src/orchestrator/mcp/aggregator/: __init__.py  catalog.py  client.py  controller.py  merge.py  server.py  upstream.py
src/orchestrator/rpc/: jsonrpc.py
src/orchestrator/transport/: base.py  http_sse.py  stdio.py  websocket.py
src/orchestrator/utils/: stdout_guard.py
tests/: test_catalog_routing.py  test_config.py  test_discovery_merge.py  test_server.py  test_upstream.py  test_upstream_client.py
